--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,13 +1,11 @@
 :root {
-  /* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  font-weight: 400;
+  --font-family: 'Inter Tight', sans-serif;
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+  --background: #1c1d20;
+  --cards: #242527;
+  --arrow: #3b3b3b;
+  --button-text: #ed3b44;
+  --main-text: #fafafa;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -16,17 +14,33 @@
   -webkit-text-size-adjust: 100%;
 }
 
-body {
-  display: flex;
-  flex-direction: column;
-  min-width: 100vw;
-  min-height: 100vh;
-  margin: 0;
+html {
+  scroll-behavior: smooth;
 }
 
-main {
-  flex-grow: 1;
+body {
+  background-color: var(--background);
+  color: var(--main-text);
+  font-family: var(--font-family);
+  font-weight: 500;
 }
-main:has(.back-link) {
-  text-align: center;
+
+section:not(:last-child) {
+  padding-bottom: 64px;
+}
+
+@media screen and (min-width: 768px) {
+  section:not(:first-child, :last-child) {
+    padding-bottom: 96px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  section:not(:first-child, :last-child) {
+    padding-bottom: 164px;
+  }
+
+  section:first-child {
+    padding-bottom: 96px;
+  }
 }
