--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,7 +12,11 @@
 
 /* Sections style */
 @import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
-@import url('./footer.css');
+@import url('./about-me.css');
+@import url('./benefits.css');
+@import url('./covers.css');
+@import url('./faq.css');
+@import url('./hero.css');
+@import url('./projects.css');
+@import url('./reviews.css');
+@import url('./work-together.css');
