made reviews section

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,3 +1,30 @@
 <section class="reviews">
-  <div class="container"></div>
+  <div class="container">
+    <h2 class="reviews-heading">REVIEWS</h2>
+    <div class="reviews-card-container swiper">
+      <ul class="reviews-card-list swiper-wrapper">
+        <li class="reviews-not-found visually-hidden">Not Found</li>
+      </ul>
+      <div class="reviews-btn-box">
+        <button
+          class="reviews-button swiper-button-prev"
+          type="button"
+          disabled
+        >
+          <svg class="reviews-button-arrow" width="24" height="24">
+            <use href="/sprite.svg#icon-arrow-narrow-left"></use>
+          </svg>
+        </button>
+        <button
+          class="reviews-button swiper-button-next"
+          type="button"
+          disabled
+        >
+          <svg class="reviews-button-arrow" width="24" height="24">
+            <use href="/sprite.svg#icon-arrow-narrow-right"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+  </div>
 </section>
