fix sprite path

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -12,7 +12,7 @@
           disabled
         >
           <svg class="reviews-button-arrow" width="24" height="24">
-            <use href="/sprite.svg#icon-arrow-narrow-left"></use>
+            <use href="/img/sprite.svg#icon-arrow-narrow-left"></use>
           </svg>
         </button>
         <button
@@ -21,7 +21,7 @@
           disabled
         >
           <svg class="reviews-button-arrow" width="24" height="24">
-            <use href="/sprite.svg#icon-arrow-narrow-right"></use>
+            <use href="/img/sprite.svg#icon-arrow-narrow-right"></use>
           </svg>
         </button>
       </div>
