Add close button for modal window

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -46,6 +46,18 @@
     position: absolute;
     top: 20px;
     right: 20px;
+
+    background-color: transparent;
+    border: none;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.icon-modal-close {
+    stroke: #fafafa;
+    stroke-width: 1px;
 }
 
 .modal-title {
