project settings fix

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -3,6 +3,7 @@
   --cards: #242527;
   --arrow: #3b3b3b;
   --button-text: #2b4441;
+  --button-hover: #1e3633;
   --main-text: #fafafa;
 
   font-synthesis: none;
