--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,4 +1,4 @@
-<div class="modal-backdrop js-modal-backdrop is-open">
+<div class="modal-backdrop js-modal-backdrop">
     <div class="modal-window ">
         <button class="modal-close-button jd-modal-close-button" type="submit">
             <svg class="icon-modal-close" width="24" height="24">
