--- a/src/partials/work-together.html
+++ b/src/partials/work-together.html
@@ -1,58 +1,59 @@
-<footer class="footer">
-  <section class="work-together" id="work-together">
-    <div class="container">
+<footer class="footer work-together section" id="work-together">
+  <div class="container">
 
-      <div class="portrait-title-together-container">
-        <div class="portrait-title-container">
-          <picture>
-            <source srcset="../img/footer-tab-desk-portrait.webp 1x, ../img/footer-tab-desk-portrait@2x.webp 2x"
-              media="(min-width: 1280px)" type="image/webp">
-            <source srcset="../img/footer-tab-desk-portrait.png 1x, ../img/footer-tab-desk-portrait@2x.png 2x"
-              media="(min-width: 1280px)" type="image/png">
+    <div class="portrait-title-together-container">
+      <div class="portrait-title-container">
+        <picture>
+          <source srcset="./img/footer-tab-desk-portrait.webp 1x, ./img/footer-tab-desk-portrait@2x.webp 2x"
+            media="(min-width: 1440px)" type="image/webp">
+          <source srcset="./img/footer-tab-desk-portrait.png 1x, ./img/footer-tab-desk-portrait@2x.png 2x"
+            media="(min-width: 1440px)" type="image/png">
 
-            <source srcset="../img/footer-tab-desk-portrait.webp 1x, ../img/footer-tab-desk-portrait@2x.webp 2x"
-              media="(min-width: 768px)" type="image/webp">
-            <source srcset="../img/footer-tab-desk-portrait.png, ../img/footer-tab-desk-portrait@2x.png 2x"
-              media="(min-width: 768px)" type="image/png">
+          <source srcset="./img/footer-tab-desk-portrait.webp 1x, ./img/footer-tab-desk-portrait@2x.webp 2x"
+            media="(min-width: 768px)" type="image/webp">
+          <source srcset="./img/footer-tab-desk-portrait.png, ./img/footer-tab-desk-portrait@2x.png 2x"
+            media="(min-width: 768px)" type="image/png">
 
-            <source srcset="../img/footer-mob-portrait.webp 1x, ../img/footer-mob-portrait@2x.webp 2x"
-              media="(max-width: 767px)" type="image/webp">
-            <source srcset="../img/footer-mob-portrait.png 1x, ../img/footer-mob-portraitt@2x.png 2x"
-              media="(max-width: 767px)" type="image/png">
+          <source srcset="./img/footer-mob-portrait.webp 1x, ./img/footer-mob-portrait@2x.webp 2x"
+            media="(max-width: 767px)" type="image/webp">
+          <source srcset="./img/footer-mob-portrait.png 1x, ./img/footer-mob-portraitt@2x.png 2x"
+            media="(max-width: 767px)" type="image/png">
 
-            <img class="section-portrait" src="../img/footer-mob-portrait.png" alt="A portrait">
-          </picture>
+          <img class="section-portrait" src="../img/footer-mob-portrait.png" alt="A portrait">
+        </picture>
 
-          <h2 class="form-title">Let's <span class="red">work</span></h2>
-        </div>
-        <span class="form-title">together</span>
+        <h2 class="form-title">Let's <span class="red">work</span></h2>
       </div>
+      <span class="form-title">together</span>
+    </div>
 
-      <form class="form js-form">
-        <div class="input-message-container">
+    <form class="form js-form">
+      <div class="input-message-container">
+        <div class="inputs-container">
           <input class="form-input email js-email" type="email" name="user-email" placeholder="clients@gmail.com"
             pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$">
 
-          <div class="message-text">
+          <!-- <div class="message-text">
             <p class="success-messasge hide js-success-messasge">Success!</p>
             <p class="error-messasge hide js-error-messasge">Invalid email, please try again</p>
-          </div>
+          </div> -->
+
+          <input class="form-input comment" type="text" name="user-comment" placeholder="comments">
         </div>
 
-        <input class="form-input comment" type="text" name="user-comment" placeholder="comments">
-        <button class="form-button" type="submit">Send</button>
-      </form>
+      </div>
+      <button class="form-button" type="submit">Send</button>
+    </form>
 
-      <address class="address">
-        <ul class="address-list">
-          <li class="address-item">
-            <a class="address-link" href="mailto:lloydjefferson@gmail.com">lloydjefferson@gmail.com</a>
-          </li>
-          <li class="address-item">
-            <a class="address-link" href="tel:+3801111111111">+380 11 1111 11 11</a>
-          </li>
-        </ul>
-      </address>
-    </div>
-  </section>
+    <address class="address">
+      <ul class="address-list">
+        <li class="address-item">
+          <a class="address-link" href="mailto:lloydjefferson@gmail.com">lloydjefferson@gmail.com</a>
+        </li>
+        <li class="address-item">
+          <a class="address-link" href="tel:+3801111111111">+380 11 1111 11 11</a>
+        </li>
+      </ul>
+    </address>
+  </div>
 </footer>
