--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -30,6 +30,7 @@
 }
 
 .reviews-card-image {
+  border-radius: 10px;
   margin-bottom: 32px;
 }
 
@@ -71,6 +72,7 @@
 .reviews-button-arrow {
   stroke: #fafafa;
   fill: none;
+  transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .reviews-button:hover,
