--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,3 +1,14 @@
 <section class="hero">
-  <div class="container"></div>
+  <div class="container">
+    <h1 class="main-title">HELLO.<br/>
+      I’M FULLSTACK DEVELOPER 
+      LLOYD JEFFERSON.</h1>
+  <ul class="social-list">
+      <li class="link-item"><a href="https://www.instagram.com/goitclub/" target="_blank">IG</a></li>
+      <li class="link-item"><a href="https://www.facebook.com/goITclub/" target="_blank">FB</a></li>
+      <li class="link-item"><a href="https://www.youtube.com/c/GoIT" target="_blank">YT</a></li>
+      <li class="link-item"><a href="https://github.com/zhonik/project-JS-Geeks#" target="_blank">GH</a></li>
+      <li class="link-item email"><a href="mailto:lloydjefferson@gmail.com" target="_blank">lloydjefferson@gmail.com</a></li>
+  </ul>
+  </div>
 </section>
