--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -55,21 +55,32 @@
     justify-content: center;
 }
 
+.modal-close-button:hover .icon-modal-close,
+.modal-close-button:focus .icon-modal-close {
+    stroke: var(--button-hover);
+}
+
 .icon-modal-close {
     stroke: #fafafa;
     stroke-width: 1px;
+    transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-title {
     font-weight: 600;
+    line-height: 1.5;
+    letter-spacing: -0.02em;
     font-size: 20px;
     text-align: center;
     margin-bottom: 16px;
 }
 
 .modal-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: -0.02em;
     text-align: center;
-    color: #fafafa;
+    color: rgba(250, 250, 250, 0.6);
 }
 
 @media screen and (min-width: 768px) {
