--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,14 +1,3 @@
 <div class="modal-backdrop js-modal-backdrop">
-    <div class="modal-window ">
-        <button class="modal-close-button jd-modal-close-button" type="submit">
-            <svg class="icon-modal-close" width="24" height="24">
-                <use href="../img//sprite.svg#x"></use>
-            </svg>
-        </button>
-        <h2 class="modal-title">Thank you for your interest in cooperation!</h2>
-        <p class="modal-text">
-            The manage will contact you shortly to discuss further deatils and opportunities for cooperation. Please
-            stay in touch.
-        </p>
-    </div>
+    <div class="modal-window js-modal-window"></div>
 </div>
