--- a/src/partials/work-together.html
+++ b/src/partials/work-together.html
@@ -43,7 +43,7 @@
         </div>
 
       </div>
-      <button class="form-button" type="submit">Send</button>
+      <button class="form-button" type="submit" aria-label="Send form">Send</button>
     </form>
 
     <address class="address">
