--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,3 +1,79 @@
 <section class="faq" id="faq">
-  <div class="container"></div>
+  <div class="container">
+    <link rel="stylesheet" href="../css/styles.css" />
+
+    <h1 class="faq-title">FAQ</h1>
+
+    <div class="faq-container">
+      <ul class="faq-list">
+        <li class="faq-item">
+          <div class="faq-header">
+            <p class="faq-question">Питання 1</p>
+            <button class="toggle-btn">
+              <svg class="icon">
+                <use xlink:href="img/sprite.svg#icon-arrow-down"></use>
+              </svg>
+            </button>
+          </div>
+          <div class="faq-answer">Відповідь 1</div>
+        </li>
+        <li class="faq-item">
+          <div class="faq-header">
+            <p class="faq-question">Питання 2</p>
+            <button class="toggle-btn">
+              <svg class="icon">
+                <use xlink:href="img/sprite.svg#icon-arrow-down"></use>
+              </svg>
+            </button>
+          </div>
+          <div class="faq-answer">Відповідь 2</div>
+        </li>
+        <li class="faq-item">
+          <div class="faq-header">
+            <p class="faq-question">Питання 3</p>
+            <button class="toggle-btn">
+              <svg class="icon">
+                <use xlink:href="img/sprite.svg#icon-arrow-down"></use>
+              </svg>
+            </button>
+          </div>
+          <div class="faq-answer">Відповідь 3</div>
+        </li>
+        <li class="faq-item">
+          <div class="faq-header">
+            <p class="faq-question">Питання 4</p>
+            <button class="toggle-btn">
+              <svg class="icon">
+                <use xlink:href="img/sprite.svg#icon-arrow-down"></use>
+              </svg>
+            </button>
+          </div>
+          <div class="faq-answer">Відповідь 4</div>
+        </li>
+        <li class="faq-item">
+          <div class="faq-header">
+            <p class="faq-question">Питання 5</p>
+            <button class="toggle-btn">
+              <svg class="icon">
+                <use xlink:href="img/sprite.svg#icon-arrow-down"></use>
+              </svg>
+            </button>
+          </div>
+          <div class="faq-answer">Відповідь 5</div>
+        </li>
+        <li class="faq-item last-item">
+          <div class="faq-header">
+            <p class="faq-question">Питання 6</p>
+            <button class="toggle-btn">
+              <svg class="icon">
+                <use xlink:href="img/sprite.svg#icon-arrow-down"></use>
+              </svg>
+            </button>
+          </div>
+          <div class="faq-answer">Відповідь 6</div>
+        </li>
+      </ul>
+    </div>
+    <script src="js/faq.js"></script>
+  </div>
 </section>
