fix heading uppercase

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,6 +1,6 @@
 <section class="reviews">
   <div class="container">
-    <h2 class="reviews-heading">REVIEWS</h2>
+    <h2 class="reviews-heading">Reviews</h2>
     <div class="reviews-card-container swiper">
       <ul class="reviews-card-list swiper-wrapper">
         <li class="reviews-not-found visually-hidden">Not Found</li>
