--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -8,6 +8,7 @@
   line-height: 1.5;
   letter-spacing: -0.02em;
   color: rgba(250, 250, 250, 0.4);
+  text-transform: uppercase;
   margin-bottom: 32px;
 }
 
