--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,22 +1,24 @@
+/* --------Styles for Mobile --------*/
 .hero {
-    max-width: 375px;
+    width: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
-    background-image: url(../img/hero-1x.png);
+    background-image: url(/img/hero-1x.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    padding-top: 281px;
 }
 
 @media (min-resolution: 192dpi) {
     .hero {
-        background-image: url("../img/hero-2x.png");
+        background-image: url("/img/hero-2x.png");
     }
 }
 
 .main-title{
-font-family: "Inter Tight", sans-serif;
+font-family: 'Inter Tight', sans-serif;
 font-weight: 500;
 font-size: 50px;
 line-height: 1;
@@ -25,61 +27,69 @@ text-transform: uppercase;
 color: #fafafa;
 max-width: 343px;
 margin: 0 auto;
-margin-top: 281px;  
+margin-bottom: 212px;  
 }
 
 
 .social-list {
-    margin-top: 212px;
     display: flex;
-    justify-content: flex-end;
+    position: absolute;
+    bottom: 32px;  
+    right: 17px;
     gap: 4px;
 }
 
-.link-item{
-font-family: "Inter Tight", sans-serif;
+.link-item > a {
+font-family: 'Inter Tight', sans-serif;
 font-weight: 500;
 font-size: 14px;
 letter-spacing: -0.02em;
 color: #fafafa;
 border: 1px solid rgba(250, 250, 250, 0.2);
 border-radius: 60px;
-padding: 10px 8px;
+display: flex;
+justify-content: center;
+align-items: center;
 width: 37px;
 height: 37px;
+transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.email{
+.email > a {
     border: 1px solid rgba(250, 250, 250, 0.2);
     border-radius: 60px;
-    padding: 10px 12px;
     width: 178px;
     height: 37px;
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link-item > a:hover {
+    transform: scale(1.1);
 }
 
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
  .hero {
-    max-width: 768px;
+    padding-top: 300px;
  }
  .main-title{
     font-weight: 500;
     font-size: 90px;
-    max-width: 632px;
-    margin-top: 300px;  
+    max-width: 632px; 
+    margin-bottom: 187px; 
     }
     .social-list {
-        margin-top: 187px;
+        bottom: 32px;
+        right: 32px;
         gap: 8px;
     }
-    .link-item{
+    .link-item > a {
         font-weight: 500;
         font-size: 16px;
-        padding: 18px 20px;
         width: 55px;
         height: 55px;
         }
-        .email{
+        .email > a {
             padding: 18px 24px;
             width: 223px;
             height: 55px;
@@ -89,15 +99,14 @@ height: 37px;
 /* Styles for Desktop devices */
 @media only screen and (min-width: 1440px) {
     .hero {
-        max-width: 1440px;
-     }
+        padding-top: 242px;
+    }
      .main-title{
         max-width: 1084px;
-        margin-top: 242px;  
-        }
-        .social-list {
-            margin-top: 301px;
-            gap: 10px;
-        }
+        margin-bottom: 301px;  
+    }
+    .social-list {
+    gap: 10px;
+    }
   }
   
