bg-img && js logic && fix paddings

--- a/src/partials/work-together.html
+++ b/src/partials/work-together.html
@@ -1,14 +1,9 @@
 <footer class="footer work-together section" id="work-together">
-  <div class="container">
+  <div class="container form-section-container">
 
     <div class="portrait-title-together-container">
       <div class="portrait-title-container">
         <picture>
-          <source srcset="./img/footer-tab-desk-portrait.webp 1x, ./img/footer-tab-desk-portrait@2x.webp 2x"
-            media="(min-width: 1440px)" type="image/webp">
-          <source srcset="./img/footer-tab-desk-portrait.png 1x, ./img/footer-tab-desk-portrait@2x.png 2x"
-            media="(min-width: 1440px)" type="image/png">
-
           <source srcset="./img/footer-tab-desk-portrait.webp 1x, ./img/footer-tab-desk-portrait@2x.webp 2x"
             media="(min-width: 768px)" type="image/webp">
           <source srcset="./img/footer-tab-desk-portrait.png, ./img/footer-tab-desk-portrait@2x.png 2x"
