--- a/src/css/work-together.css
+++ b/src/css/work-together.css
@@ -1,18 +1,10 @@
 .work-together {
-    padding-top: 64px;
+    padding-top: 32px;
     padding-bottom: 32px;
-    position: relative;
-}
-
-.work-together::after {
-    position: absolute;
-    content: '';
-    background-image: url(../img/footer-mob-bg-decor.png);
-    width: 86px;
-    height: 460px;
-    bottom: 0;
-    right: 0;
-    z-index: -1;
+    background-image: url(../img/footer-desk-bg-decor.png);
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: 290px center;
 }
 
 .portrait-title-together-container {
@@ -61,7 +53,7 @@
 
 .form-input::placeholder {
     color: rgba(250, 250, 250, 0.6);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: т
 }
 
 .form-input:hover::placeholder,
@@ -176,21 +168,9 @@
 
 @media screen and (min-width: 768px) {
     .work-together {
-        padding-top: 176px;
+        padding-top: 88px;
         padding-bottom: 170px;
-        position: relative;
-    }
-
-    .work-together::after {
-        background-image: url(../img/footer-tab-bg-decor.png);
-        width: 198px;
-        height: 384px;
-    }
-
-    @media (min-resolution: 192dpi) {
-        .work-together::after {
-            background-image: url(../img/footer-tab-bg-decor@2x.png);
-        }
+        background-position: 560px center;
     }
 
     .portrait-title-container {
@@ -243,20 +223,13 @@
 
 @media screen and (min-width: 1440px) {
     .work-together {
-        padding-top: 244px;
+
+        background-position: 980px center;
+    }
+
+    .form-section-container {
         max-width: 1048px;
         margin: 0 auto;
-    }
-
-    .work-together::after {
-        background-image: url(../img/footer-desk-bg-decor.png);
-        width: 400px;
-    }
-
-    @media (min-resolution: 192dpi) {
-        .work-together::after {
-            background-image: url(../img/footer-desk-bg-decor@2x.png);
-        }
     }
 
     .form {
