--- a/src/css/work-together.css
+++ b/src/css/work-together.css
@@ -53,7 +53,7 @@
 
 .form-input::placeholder {
     color: rgba(250, 250, 250, 0.6);
-    transition: т
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .form-input:hover::placeholder,
