create project section

--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -1,3 +1,166 @@
 <section class="projects" id="projects">
-  <div class="container"></div>
+  <div class="container">
+    <h2 class="projects-title">Projects</h2>
+    <div class="projects-container swiper">
+      <ul class="projects-list swiper-wrapper">
+        <li class="project-item swiper-slide">
+          <div class="project-content">
+            <ul class="project-tags-list">
+              <li class="project-tags-item">#react</li>
+              <li class="project-tags-item">#js</li>
+              <li class="project-tags-item">#node js</li>
+              <li class="project-tags-item">#git</li>
+            </ul>
+            <h3 class="project-subtitle">
+              Programming Across Borders: Ideas, Technologies, Innovations
+            </h3>
+            <a
+              class="project-link"
+              href="https://github.com/zhonik/project-JS-Geeks"
+              target="_blank"
+              rel="noopener noreferrer"
+              >See project</a
+            >
+          </div>
+
+          <div class="project-image-container">
+            <picture>
+              <source
+                srcset="./img/prjct-tab-1.webp 1x, ./img/prjct-tab-1@2.webp 2x"
+                media="(min-width: 768px)"
+                type="image/webp"
+              />
+              <source
+                media="(min-width: 768px)"
+                srcset="./img/prjct-tab-1.jpg 1x, ./img/prjct-tab-1@2.jpg 2x"
+              />
+              <source
+                srcset="./img/prjct-mob-1.webp 1x, ./img/prjct-mob-1@2.webp 2x"
+                media="(min-width: 768px)"
+                type="image/webp"
+              />
+              <source
+                media="(max-width: 767px)"
+                srcset="./img/prjct-mob-1.jpg 1x, ./img/prjct-mob-1@2.jpg 2x"
+              />
+              <img
+                src="./img/prjct-tab-1.jpg"
+                alt="Book search app"
+                width="614"
+              />
+            </picture>
+          </div>
+        </li>
+        <li class="project-item swiper-slide">
+          <div class="project-content">
+            <ul class="project-tags-list">
+              <li class="project-tags-item">#react</li>
+              <li class="project-tags-item">#js</li>
+              <li class="project-tags-item">#node js</li>
+              <li class="project-tags-item">#git</li>
+            </ul>
+            <h3 class="project-subtitle">
+              Programming Across Borders: Ideas, Technologies, Innovations
+            </h3>
+            <a
+              class="project-link"
+              href="https://zhonik.github.io/project-JS-Geeks/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >See project</a
+            >
+          </div>
+
+          <div class="project-image-container">
+            <picture>
+              <source
+                srcset="./img/prjct-tab-2.webp 1x, ./img/prjct-tab-2@2.webp 2x"
+                media="(min-width: 768px)"
+                type="image/webp"
+              />
+              <source
+                media="(min-width: 768px)"
+                srcset="./img/prjct-tab-2.jpg 1x, ./img/prjct-tab-2@2.jpg 2x"
+              />
+              <source
+                srcset="./img/prjct-mob-2.webp 1x, ./img/prjct-mob-2@2.webp 2x"
+                media="(min-width: 768px)"
+                type="image/webp"
+              />
+              <source
+                media="(max-width: 767px)"
+                srcset="./img/prjct-mob-2.jpg 1x, ./img/prjct-mob-2@2.jpg 2x"
+              />
+              <img
+                src="./img/prjct-tab-2.jpg"
+                alt="Project petlove. A man and a woman hold a dog in their arms"
+                width="614"
+              />
+            </picture>
+          </div>
+        </li>
+        <li class="project-item swiper-slide">
+          <div class="project-content">
+            <ul class="project-tags-list">
+              <li class="project-tags-item">#react</li>
+              <li class="project-tags-item">#js</li>
+              <li class="project-tags-item">#node js</li>
+              <li class="project-tags-item">#git</li>
+            </ul>
+            <h3 class="project-subtitle">
+              Programming Across Borders: Ideas, Technologies, Innovations
+            </h3>
+            <a
+              class="project-link"
+              href="https://zhonik.github.io/project-JS-Geeks/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >See project</a
+            >
+          </div>
+
+          <div class="project-image-container">
+            <picture>
+              <source
+                srcset="./img/prjct-tab-3.webp 1x, ./img/prjct-tab-3@2.webp 2x"
+                media="(min-width: 768px)"
+                type="image/webp"
+              />
+              <source
+                media="(min-width: 768px)"
+                srcset="./img/prjct-tab-3.jpg 1x, ./img/prjct-tab-3@2.jpg 2x"
+              />
+              <source
+                srcset="./img/prjct-mob-3.webp 1x, ./img/prjct-mob-3@2.webp 2x"
+                media="(min-width: 768px)"
+                type="image/webp"
+              />
+              <source
+                media="(max-width: 767px)"
+                srcset="./img/prjct-mob-3.jpg 1x, ./img/prjct-mob-3@2.jpg 2x"
+              />
+              <img
+                src="./img/prjct-tab-3.jpg"
+                alt="App VocabBuilder. Registration form"
+                width="614"
+              />
+            </picture>
+          </div>
+        </li>
+      </ul>
+
+      <div class="projects-btn-box">
+        <button class="projects-btn swiper-button-prev" type="button" disabled>
+          <svg class="projects-btn-arrow" width="24" height="24">
+            <use href="./img/sprite.svg#icon-arrow-narrow-left"></use>
+          </svg>
+        </button>
+        <button class="projects-btn swiper-button-next" type="button">
+          <svg class="projects-btn-arrow" width="24" height="24">
+            <use href="./img/sprite.svg#icon-arrow-narrow-right"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+  </div>
 </section>
