completed the logic for comment input

--- a/src/partials/work-together.html
+++ b/src/partials/work-together.html
@@ -33,8 +33,7 @@
             <p class="error-message fade-out js-error-messasge">Invalid email, please try again</p>
           </div>
 
-          <input class="form-input comment js-comment" type="text" name="user-comment" placeholder="comments"
-            data-maxlength="30">
+          <input class="form-input comment js-comment" type="text" name="user-comment" placeholder="comments">
         </div>
 
       </div>
