--- a/src/css/work-together.css
+++ b/src/css/work-together.css
@@ -93,22 +93,23 @@
     min-width: 314px;
 }
 
-.address-link {
+.address-item {
     border: 1px solid rgba(250, 250, 250, 0.2);
     border-radius: 60px;
-
-    padding: 10px 12px;
-
-    font-weight: 500;
-    font-size: 14px;
-    letter-spacing: -0.02em;
-
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.address-link:hover,
-.address-link:focus {
+.address-item:hover,
+.address-item:focus {
     border-color: #fafafa;
+}
+
+.address-link {
+    display: block;
+    padding: 10px 12px;
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: -0.02em;
 }
 
 .message-text {
