--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,3 +1,58 @@
 <section class="benefits" id="benefits">
-  <div class="container"></div>
+  <div class="container">
+    <div class="grid-container">
+      <h2 class="benefits-title">Benefits of working with me</h2>
+      <ul class="benefits-list">
+        <li class="benefits-item">
+          <div class="benefits-icon-frame">
+            <svg class="benefits-icon" width="24" height="24">
+              <use href="../img/sprite.svg#user"></use>
+            </svg>
+          </div>
+          <h3 class="benefits-subtitle">Expertise</h3>
+          <p class="benefits-text">
+            As a highly experienced developer, I have deep knowledge of
+            programming and website development.
+          </p>
+        </li>
+        <li class="benefits-item">
+          <div class="benefits-icon-frame">
+            <svg class="benefits-icon" width="24" height="24">
+              <use href="../img/sprite.svg#message-chat"></use>
+            </svg>
+          </div>
+          <h3 class="benefits-subtitle">Communication</h3>
+          <p class="benefits-text">
+            Understanding your needs and wants is my priority and I am always
+            open to discussions and corrections.
+          </p>
+        </li>
+        <li class="benefits-item">
+          <div class="benefits-icon-frame">
+            <svg class="benefits-icon" width="24" height="24">
+              <use href="../img/sprite.svg#brush"></use>
+            </svg>
+          </div>
+          <h3 class="benefits-subtitle">Art</h3>
+          <p class="benefits-text">
+            Thanks to my creative nature, I am ready to accept challenges and
+            help you bring your ideas to life.
+          </p>
+        </li>
+        <li class="benefits-item">
+          <div class="benefits-icon-frame">
+            <svg class="benefits-icon" width="24" height="24">
+              <use href="../img/sprite.svg#hourglass"></use>
+            </svg>
+          </div>
+          <h3 class="benefits-subtitle">Urgent execution</h3>
+          <p class="benefits-text">
+            I understand how important time is to you. Ready to work quickly and
+            efficiently, without reducing the quality of work.
+          </p>
+        </li>
+      </ul>
+      <a href="#work-together" class="cta-btn">Order the project</a>
+    </div>
+  </div>
 </section>
