--- a/src/css/benefits.css
+++ b/src/css/benefits.css
@@ -29,6 +29,12 @@
   background-color: var(--cards);
   border-radius: 20px;
   padding: 24px;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover {
+    transform: translateY(-5px);
+    background-color: var(--button-hover);
+  }
 
   @media screen and (min-width: 768px) {
     & {
@@ -88,6 +94,13 @@
   align-items: center;
   justify-content: center;
   width: max-content;
+
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    border-color: #fafafa;
+  }
 }
 
 @media screen and (min-width: 1440px) {
