section Benefits: fix icons

--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -6,7 +6,7 @@
         <li class="benefits-item">
           <div class="benefits-icon-frame">
             <svg class="benefits-icon" width="24" height="24">
-              <use href="../img/sprite.svg#user"></use>
+              <use href="./img/sprite.svg#user"></use>
             </svg>
           </div>
           <h3 class="benefits-subtitle">Expertise</h3>
@@ -18,7 +18,7 @@
         <li class="benefits-item">
           <div class="benefits-icon-frame">
             <svg class="benefits-icon" width="24" height="24">
-              <use href="../img/sprite.svg#message-chat"></use>
+              <use href="./img/sprite.svg#message-chat"></use>
             </svg>
           </div>
           <h3 class="benefits-subtitle">Communication</h3>
@@ -30,7 +30,7 @@
         <li class="benefits-item">
           <div class="benefits-icon-frame">
             <svg class="benefits-icon" width="24" height="24">
-              <use href="../img/sprite.svg#brush"></use>
+              <use href="./img/sprite.svg#brush"></use>
             </svg>
           </div>
           <h3 class="benefits-subtitle">Art</h3>
@@ -42,7 +42,7 @@
         <li class="benefits-item">
           <div class="benefits-icon-frame">
             <svg class="benefits-icon" width="24" height="24">
-              <use href="../img/sprite.svg#hourglass"></use>
+              <use href="./img/sprite.svg#hourglass"></use>
             </svg>
           </div>
           <h3 class="benefits-subtitle">Urgent execution</h3>
