--- a/src/css/faq.css
+++ b/src/css/faq.css
@@ -12,9 +12,6 @@
   letter-spacing: -0.02em;
 }
 
-.faq-list {
-}
-
 .faq-item {
   position: relative;
   padding-top: 20px;
@@ -92,16 +89,21 @@
 }
 
 .faq-answer {
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1),
+    height 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+  height: 0;
+  overflow: hidden;
+  margin-top: 26px;
   color: rgba(250, 250, 250, 0.6);
   font-size: 16px;
   line-height: 150%;
   letter-spacing: -0.02em;
-  transition: max-height 0.6s cubic-bezier(0.4, 0, 0.2, 1),
-    opacity 0.6s cubic-bezier(0.4, 0, 0.2, 1),
-    transform 0.6s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .faq-answer.open {
+  transform: scaleY(1);
 }
 
 @media (min-width: 768px) {
@@ -175,19 +177,19 @@
   .faq-item:nth-child(4) {
     grid-area: item4;
     border-right: none;
-    padding-right: 32px;
+    padding-left: 32px;
   }
 
   .faq-item:nth-child(5) {
     grid-area: item5;
     border-right: none;
-    padding-right: 32px;
+    padding-left: 32px;
   }
 
   .faq-item:nth-child(6) {
     grid-area: item6;
     border-right: none;
     border-bottom: 1px solid rgba(250, 250, 250, 0.2);
-    padding-right: 32px;
+    padding-left: 32px;
   }
 }
