--- a/src/css/faq.css
+++ b/src/css/faq.css
@@ -15,7 +15,6 @@
 .faq-item {
   position: relative;
   padding-top: 20px;
-  margin-bottom: 40px;
 }
 
 .faq-item:not(:last-child)::before {
@@ -92,10 +91,11 @@
   transform: scaleY(0);
   transform-origin: top;
   transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1),
-    height 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+    height 0.4s cubic-bezier(0.4, 0, 0.2, 1),
+    padding-top 0.4s cubic-bezier(0.4, 0, 0.2, 1),
+    padding-bottom 0.4s cubic-bezier(0.4, 0, 0.2, 1);
   height: 0;
   overflow: hidden;
-  margin-top: 26px;
   color: rgba(250, 250, 250, 0.6);
   font-size: 16px;
   line-height: 150%;
