--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,9 +1,8 @@
 <section class="hero">
-  <div class="container">
+  <div class="container hero-container">
     <h1 class="main-title">HELLO.<br/>
       I’M FULLSTACK DEVELOPER 
       LLOYD JEFFERSON.</h1>
-      <div class="list-container">
  <ul class="social-list">
       <li class="link-item"><a href="https://www.instagram.com/goitclub/" target="_blank">IG</a></li>
       <li class="link-item"><a href="https://www.facebook.com/goITclub/" target="_blank">FB</a></li>
@@ -11,6 +10,5 @@
       <li class="link-item"><a href="https://github.com/zhonik/project-JS-Geeks#" target="_blank">GH</a></li>
       <li class="link-item email"><a href="mailto:lloydjefferson@gmail.com" target="_blank">lloydjefferson@gmail.com</a></li>
   </ul>
-      </div>
   </div>
 </section>
