--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <div class="header-container">
+  <div class="container header-container">
     <a class="header-logo" href="./index.html" aria-label="Go to homepage">
       <img
         class="logo-foto"
