--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,5 @@
 <section class="hero">
-  <div class="container hero-container">
+  <div class="container">
     <h1 class="main-title">HELLO.<br/>
       I’M FULLSTACK DEVELOPER 
       LLOYD JEFFERSON.</h1>
