--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,3 +22,4 @@
 @import url('./reviews.css');
 @import url('./work-together.css');
 @import url('./modal.css');
+@import url('./scroll-to-top.css');
