--- a/src/partials/scroll-to-top.html
+++ b/src/partials/scroll-to-top.html
@@ -1,5 +1,5 @@
 <button id="scrollToTop" class="scroll-to-top">
   <svg class="icon">
-    <use xlink:href="img/sprite.svg#icon-arrow-down"></use>
+    <use xlink:href="./img/sprite.svg#icon-arrow-down"></use>
   </svg>
 </button>
