--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -85,11 +85,13 @@
   font-size: 16px;
   letter-spacing: -0.02em;
   color: var(--main-text);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
     background-color: var(--button-hover);
+    transform: scale(1.05);
   }
 }
 
