--- a/src/css/header.css
+++ b/src/css/header.css
@@ -17,21 +17,30 @@
 
 
 .mobile-menu-container {  
-    background-color: #1c1d20;  
+    /* background-color: #1c1d20; */
+    background-image: url(/img/hero-1x-opt.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     position: fixed;  
     top: 0; 
-    left: -100%; 
+    /* left: -100%; */
+    right: -100%; 
     width: 100%; 
     height: 100%;  
     display: flex;  
     flex-direction: column;  
     align-items: center;  
     justify-content: flex-end;  
-    transition: transform 0.34s cubic-bezier(0.39, 0.46, 0.02, 0.86);  
+    transition: transform 250ms ease;
+    /* transition: transform 0.34s cubic-bezier(0.39, 0.46, 0.02, 0.86); */
+
 }  
 
 .mobile-menu-container.show {  
-    transform: translateX(100%);
+    /* transform: translateX(100%); */
+    transform: translateX(-100%);
+
 }  
 
 
@@ -88,15 +97,15 @@
     text-decoration: underline;
     cursor: pointer;
     align-items: center;
-        transition: color 550ms ease;
-
+    transition: color 250ms ease;
+    letter-spacing: -0.02em;
 }
 
 .nav-item:hover, .nav-link:hover {
-    color: #1e3633;
+    color: #417670;
 }
 
-.ModalBodyLock {  
+.modal-body-lock {  
     overflow: hidden;
 }  
 
@@ -177,7 +186,7 @@
   }
 
   .header-menu-button:hover {
-    color: #2b4441;
+    color: #417670;
   }
 
   .nav-list {
@@ -239,6 +248,6 @@
   .nav-link:hover,
   .nav-link:focus {
     /* color: #ed3b44; */
-    color: #2b4441;
+    color: #417670;
   }
 }
