remove webp imgs

--- a/src/partials/work-together.html
+++ b/src/partials/work-together.html
@@ -4,15 +4,11 @@
     <div class="portrait-title-together-container">
       <div class="portrait-title-container">
         <picture>
-          <source srcset="./img/footer-tab-desk-portrait.webp 1x, ./img/footer-tab-desk-portrait@2x.webp 2x"
-            media="(min-width: 768px)" type="image/webp">
           <source srcset="./img/footer-tab-desk-portrait.png, ./img/footer-tab-desk-portrait@2x.png 2x"
-            media="(min-width: 768px)" type="image/png">
+            media="(min-width: 768px)">
 
-          <source srcset="./img/footer-mob-portrait.webp 1x, ./img/footer-mob-portrait@2x.webp 2x"
-            media="(max-width: 767px)" type="image/webp">
-          <source srcset="./img/footer-mob-portrait.png 1x, ./img/footer-mob-portraitt@2x.png 2x"
-            media="(max-width: 767px)" type="image/png">
+          <source srcset="./img/footer-mob-portrait.png 1x, ./img/footer-mob-portrait@2x.png 2x"
+            media="(max-width: 767px)">
 
           <img class="section-portrait" src="./img/footer-mob-portrait.png" alt="A portrait">
         </picture>
